* https://github.com/clj-commons/etaoin/issues/402[#402]: Only send body for webdriver `POST` requests to appease `safaridriver`
* https://github.com/clj-commons/etaoin/issues/403[#403]: The `select` fn now clicks on the `select` element before clicking the `option` element to appease `safaridriver`
* https://github.com/clj-commons/etaoin/issues/408[#408]: Fix `switch-window` for `msedgedriver`
* Docs
** https://github.com/clj-commons/etaoin/issues/393[#393]: Add changelog
** https://github.com/clj-commons/etaoin/issues/396[#396]: Move from Markdown to AsciiDoc
* Internal quality
** https://github.com/clj-commons/etaoin/issues/382[#382]: Fix process fork testing on Windows
** https://github.com/clj-commons/etaoin/issues/391[#391]: Identify browser name on failed ide tests
** https://github.com/clj-commons/etaoin/issues/390[#390]: Add internal clj-kondo config
** https://github.com/clj-commons/etaoin/issues/381[#381]: In addition to ubuntu, now also testing on macOS and Windows (using GitHub Actions https://github.com/clj-commons/etaoin/issues/392[#392] with parallelization https://github.com/clj-commons/etaoin/issues/420[#420])

== v0.4.6

* https://github.com/clj-commons/etaoin/issues/367[#367]: Use actions to fix double-click

== v0.4.5

* https://github.com/clj-commons/etaoin/pull/365[#365]: Improve status messages when waiting

== v0.4.4

* Add v2 api

== v0.4.3

* Fix user-agent functions

== v0.4.2

* Add user-agent functions to api

== v0.4.1

* https://github.com/clj-commons/etaoin/issues/347[#347]: Add support for mltiple clicks
* https://github.com/clj-commons/etaoin/pull/349[#349]: Fix typo for duration within `add-action`

== v0.4.0 [breaking]

Breaking Changes

* https://github.com/clj-commons/etaoin/issues/111[#111]: the driver instance is *now a map instead of an atom*.
+
Breaking changes are never embarked on lightly but we felt it important to transition to more a more idiomatic use of Clojure.
+