@@ -1,7 +1,6 @@
 /target
 /classes
 /checkouts
-pom.xml
 pom.xml.asc
 *.jar
 *.class
@@ -23,3 +22,5 @@ build.xml
 .cache
 # VSCode Calva extension
 /.calva
+# Clojure tools cli classpath cache
+/.cpcache
