@@ -1,27 +1,4 @@
-
-repl:
-	lein repl
-
-repl-1.9:
-	lein with-profile +1.9 repl
-
-.PHONY: test
-test:
-	lein test
-
-orig:
-	find . -name '*.orig' -delete
-
-.PHONY: tags
-tags:
-	ctags -e -R ./src
-
-deploy:
-	lein deploy clojars
-
-.PHONY: release
-release:
-	lein release
+;; TODO: lread move to bb tasks
 
 .PHONY: kill
 kill:
@@ -30,9 +7,9 @@ kill:
 	pkill safaridriver || true
 	pkill phantomjs || true
 
-
 IMAGE := etaoin
 
+;; TODO: lread: have never tried, test, fix if necessary
 .PHONY: docker-build
 docker-build:
 	docker build --no-cache -t ${IMAGE}:latest .
@@ -43,6 +20,7 @@ check-host:
 		$(error The HOST variable is not set, please do `export HOST=$$HOST` first)
 	endif
 
+;; TODO: lread: have never tried, test, fix if necessary
 # works only on mac + quartz
 .PHONY: docker-test-display
 docker-test-display: check-host
@@ -51,12 +29,13 @@ docker-test-display: check-host
 	-v ${CURDIR}:/etaoin \
 	-v /tmp/.X11-unix:/tmp/.X11-unix -e DISPLAY=$(HOST):0 \
 	-w /etaoin ${IMAGE}:latest \
-	lein test || \
+	bb test all || \
 	xhost -
 
+;; TODO: lread: have never tried, test, fix if necessary
 .PHONY: docker-test
 docker-test:
 	docker run --rm \
 	-v ${CURDIR}:/etaoin \
 	-w /etaoin ${IMAGE}:latest \
-	lein test
+	bb test all
