@@ -11,5 +11,6 @@
   :leave (let [{:keys [name]} (current-task)] (status/line :detail "\nTASK %s done." name))
 
   ;; commands
+  download-deps  {:task download-deps/-main  :doc "download all deps (useful for CI prep)"}
   tools-versions {:task tools-versions/-main :doc "report on tools versions"}
   test           {:task test/-main           :doc "run all or a subset of tests, use --help for args"}}}
