@@ -1,0 +1,14 @@
+{:paths ["src"]
+ :deps {org.clojure/clojure {:mvn/version "1.9.0"} ;; min clojure version
+        babashka/fs {:mvn/version "0.1.6"}
+        clj-http/clj-http {:mvn/version "3.10.1"}
+        cheshire/cheshire {:mvn/version "5.9.0"}
+        org.clojure/tools.cli {:mvn/version "1.0.194"}
+        org.clojure/tools.logging {:mvn/version "0.3.1"}}
+ :aliases
+ {:1.11 {:replace-deps {org.clojure/clojure {:mvn/version "1.11.1"}}}
+  :debug {:extra-paths ["env/dev/resources"]}
+  :test {:extra-paths ["test" "env/test/resources"]
+         :extra-deps {io.github.cognitect-labs/test-runner {:git/tag "v0.5.1" :git/sha "dfb30dd"}
+                      ch.qos.logback/logback-classic {:mvn/version "1.3.0-alpha16"}}
+         :main-opts ["-m" "cognitect.test-runner"]}}}
