@@ -1,5 +1,0 @@
-log4j.rootLogger=INFO, console
-log4j.logger.etaoin=DEBUG
-log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%-5p %c: %m%n
