@@ -7,10 +7,10 @@
 
 (def default-opts {:error-fn
                    (fn die-on-error [{{:keys [exit cmd]} :proc}]
-                               (status/die exit
-                                           "shell exited with %d for: %s"
-                                           exit
-                                           (with-out-str (pprint/pprint cmd))))})
+                     (status/die exit
+                                 "exited with %d for: %s"
+                                 exit
+                                 (with-out-str (pprint/pprint cmd))))})
 
 (defn command
   "Thin wrapper on babashka.tasks/shell that on error, prints status error message and exits.
@@ -31,3 +31,13 @@
                      ;; hence the secret exit sauce here
                      (str full-cmd ";exit $LASTEXITCODE") ))
       (apply tasks/shell opts cmd args))))
+
+
+(defn clojure
+  "Wrap tasks/clojure for my loud error reporting treatment"
+  [& args]
+  (let [[opts args] (if (map? (first args))
+                      [(first args) (rest args)]
+                      [nil args])
+        opts (merge opts default-opts)]
+    (apply tasks/clojure opts args)))
